[package]
name = "steaks"
version = "0.1.0"
authors = ["Tibor Nagy <xnagytibor@gmail.com>"]

[dependencies]
byteorder = { git = "https://github.com/sdroege/byteorder", branch = "24bit" }
enum_primitive = "0.1.1"
gba-rs = { git = "https://github.com/xtibor/gba-rs" }
itertools = "0.6.0"
num = "0.1.37"
serde = "1.0.7"
serde_derive = "1.0.7"
uuid = { version = "0.5", features = ["serde", "v4"] }
